tests/ui/proc-macro/issue-118455-skip-err-builtin.rs
#![some_nonexistent_attribute]
//~^ ERROR cannot find attribute `some_nonexistent_attribute` in this scope
#[derive(Debug)]
pub struct SomeUserCode;

fn main() {}
